feat: add getprojectlist controller and update services